# comp_sti_matrix

./: .gitignore  Makefile  agent.md  main.py  pyproject.toml  utils_structural.py  xls_to_ppd.py
cli/: __init__.py  run_analysis.py
comp_sti_matrix/cli/: run_analysis.py
comp_sti_matrix/core/: __init__.py  analysis_driver.py  difference_utils.py  main.py  sti_loader.py  utils_structural.py
tests/: __init__.py
